<?xml version="1.0" encoding="utf-8"?>

<layout  xmlns:android="http://schemas.android.com/apk/res/android">
    
    <data>
        
        <variable
            name="taskViewModel"
            type="com.example.daniellachacz.taskmvvm.viewmodel.TaskViewModel">
        </variable>

        <variable
            name="taskInterface"
            type="com.example.daniellachacz.taskmvvm.view.OnTaskClickInterface">
        </variable>

    </data>

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:id="@+id/title"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:clickable="false"
                android:focusable="false"
                android:text="@string/title"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/description_text"
                android:layout_width="320dp"
                android:layout_height="40dp"
                android:layout_alignStart="@+id/title"
                android:layout_below="@+id/title"
                android:backgroundTint="#FFF"
                android:hint="Write something..."
                android:textColorHint="#949393"
                android:textColor="#FFF"
                android:textSize="18sp"
                android:text="@={taskViewModel.description}"
                />

        </RelativeLayout>

        <TextView
            android:id="@+id/date_text"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_alignTop="@+id/time_text"
            android:layout_marginLeft="40dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:hint="Select date"
            android:textSize="18sp"
            android:text="@={taskViewModel.date}"
            android:onClick="@{()-> taskInterface.onDateClick()}"/>

        <View
            android:id="@+id/line"
            android:layout_width="320dp"
            android:layout_height="1dp"
            android:layout_below="@+id/date_text"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/time_text"
            android:layout_width="132dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="231dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:hint="Select time"
            android:textAlignment="center"
            android:textSize="18sp"
            android:text="@={taskViewModel.time}"
            android:onClick="@{()-> taskInterface.onTimeClick()}"/>

        <TextView
            android:id="@+id/and"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="230dp"
            android:gravity="center"
            android:text="and"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="115dp"
            android:text="Save"
            android:onClick="@{(v) -> taskInterface.onSaveClick(v)}"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>

</layout>